# sc-manager

./: .biome.toml  .gitignore  CHANGELOG.md  UPLOAD_START.md  mkdocs.yml  pnpm-workspace.yaml  release-notes-v0.1.0-update-system-extended.md  release-notes-v0.1.0-update-system.md  turbo.json
adapters/: Cargo.toml  Dockerfile  README.md  cobertura.xml  nom-trailing-semicolon-fix.patch
adapters/adapter-comm-link/: Cargo.toml
adapters/adapter-comm-link/src/: lib.rs
adapters/adapter-discord/: Cargo.toml  README.md
adapters/adapter-discord/src/: lib.rs
adapters/adapter-discord/tests/: property_tests.rs
adapters/adapter-erkul/: Cargo.toml
adapters/adapter-erkul/src/: lib.rs
adapters/adapter-fleetyards/: Cargo.toml  README.md
adapters/adapter-fleetyards/src/: lib.rs
adapters/adapter-gamelog/: Cargo.toml  README.md
adapters/adapter-gamelog/src/: lib.rs  parser.rs
adapters/adapter-gamelog/tests/: property_tests.rs
adapters/adapter-llm/: Cargo.toml  Dockerfile  README.md
adapters/adapter-llm/src/: lib.rs
adapters/adapter-p2p/: Cargo.toml
adapters/adapter-p2p/src/: dht.rs  lib.rs  transport.rs
adapters/adapter-p2p/tests/: transport_core_signed_event.rs  transport_integration.rs
adapters/adapter-uex/: Cargo.toml  README.md
adapters/adapter-uex/src/: lib.rs
adapters/adapter-uex/tests/: property_tests.rs
adapters/p2p/: Cargo.toml
adapters/p2p/src/: dht.rs  lib.rs
adapters/rsi/: README.md
adapters/src/: adapter_api.rs  discord.rs  lib.rs  registry.rs
adapters/src/erkul/: README.md  mod.rs
adapters/src/fleetyards/: README.md  mod.rs
adapters/src/game_log/: README.md  mod.rs
adapters/src/rsi/: README.md  mod.rs
adapters/src/tests/: cron_scheduler.rs  data_consistency_tests.rs  metrics.rs  registry_test.rs  scheduler.rs
app/: Cargo.toml  Dockerfile  README.md  cobertura.xml
app/src/: in_memory_equipment_repo.rs  in_memory_event_repo.rs  in_memory_fleet_repo.rs  in_memory_member_repo.rs  in_memory_permission_repo.rs  in_memory_repo.rs  in_memory_role_repo.rs  in_memory_session_repo.rs  in_memory_ship_repo.rs  lib.rs  queries.rs
app/src/commands/: add_member.rs  assign_permission.rs  create_event.rs  create_fleet.rs  create_organization.rs  create_permission.rs  create_role.rs  end_session.rs  mod.rs  register_equipment.rs  register_ship.rs  remove_member.rs  start_session.rs  update_member.rs
app/src/handlers/: equipment_handler.rs  event_handler.rs  fleet_handler.rs  member_handler.rs  mod.rs  organization_handler.rs  role_handler.rs  session_handler.rs  ship_handler.rs
app/src/services/: mod.rs  policy_service.rs  session_service.rs
app/tests/: game_log_fixture_integration.rs  game_log_integration.rs  integration_activity_tracking.rs  integration_erkul_adapter.rs  integration_event.rs  integration_fleet.rs  integration_fleetyards_adapter.rs  integration_member.rs  integration_organization.rs  integration_policy_session.rs  integration_role.rs  integration_rsi.rs  session_flow_integration.rs  test_utils.rs  unit_equipment.rs  unit_event.rs  unit_event_handler_auth.rs  unit_fleet.rs  unit_fleet_handler.rs  unit_fleet_permissions.rs  unit_fleet_remove_auth.rs  unit_member.rs  unit_member_assign_auth.rs  unit_member_rsi_auth.rs  unit_org_create_auth.rs  unit_organization.rs  unit_permission.rs  unit_permission_equipment.rs  unit_permission_fleet.rs  unit_permission_ship.rs  unit_policy_service.rs  unit_role.rs  unit_session_add_event_auth.rs  unit_session_handler_auth.rs  unit_session_permission.rs  unit_session_permission_with_activity.rs
gateway/: Cargo.toml
gateway/src/: lib.rs
infrastructure/p2p-mesh/: Cargo.toml  README.md
infrastructure/p2p-mesh/src/: lib.rs
infrastructure/p2p-mesh/src/crdt/: mod.rs
infrastructure/p2p-mesh/src/gossip/: libp2p.rs  mod.rs
infrastructure/p2p-mesh/src/mini_master/: mod.rs
infrastructure/update-system/: Cargo.toml  README.md
infrastructure/update-system/src/: lib.rs
infrastructure/update-system/src/author/: mod.rs
infrastructure/update-system/src/client/: mod.rs
infrastructure/update-system/src/delta/: mod.rs
infrastructure/update-system/src/rollback/: mod.rs
infrastructure/update-system/src/signature/: mod.rs
infrastructure/update-system/tests/: integration_tests.rs
services/core-application/: Cargo.toml  cobertura.xml
services/core-application/patches/cron/: .cargo_vcs_info.json  Cargo.toml  default_18186544839249283987_0_18352.profraw  default_18186544839249283987_0_23960.profraw  default_18186544839249283987_0_3280.profraw  default_18186544839249283987_0_33988.profraw
services/core-application/src/: commands.rs  handlers.rs  in_memory_equipment_repo.rs  in_memory_event_repo.rs  in_memory_fleet_repo.rs  in_memory_member_repo.rs  in_memory_permission_repo.rs  in_memory_repo.rs  in_memory_role_repo.rs  in_memory_session_repo.rs  in_memory_ship_repo.rs  lib.rs  queries.rs  signing.rs
services/core-application/src/services/: mod.rs  (+1 more)
services/core-application/tests/: create_operation.rs  integration_e2e.rs  integration_gateway.rs  integration_redis.rs  integration_stack.rs  operation_postgres_integration.rs  signature_integration.rs  start_complete_operation.rs  unit_fleet_and_session.rs  unit_publisher_fail.rs  unit_repos_and_publisher.rs  unit_role_repo.rs
services/core-domain/: Cargo.toml  Dockerfile  cobertura.xml
services/core-domain/src/: lib.rs
services/core-domain/tests/: checkpoints.rs  fleet_tests.rs  member_tests.rs  operation_tests.rs  organization_tests.rs  publisher_tests.rs  role_permission_tests.rs  signing_negative_tests.rs  signing_tests.rs  unit_domain.rs  unit_member.rs  unit_role.rs  unit_session.rs
services/gateway/: Cargo.toml  Dockerfile  cobertura.xml
services/gateway/src/: handlers.rs  key_loader.rs  lib.rs  main.rs  nats.rs
services/gateway/tests/: health_endpoint.rs  metrics_endpoint.rs  signing_handler.rs
services/master-server/: Cargo.toml  README.md
services/master-server/src/: api.rs  config.rs  keys.rs  lib.rs  publish.rs
services/master-server/tests/: admin_integration.rs  api_integration.rs  integration_start.rs
(+241 files in other folders)
