[package]
name = "sc_manager_adapter_discord"
version = "0.1.0"
edition = "2021"

[lib]
name = "adapter_discord"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
sc_manager_core = { path = "../../services/core-domain" }

[dev-dependencies]
proptest = "1.0"
