[package]
name = "sc_manager_p2p"
version = "0.1.0"
edition = "2021"

[lib]
name = "sc_manager_p2p"
path = "src/lib.rs"

[dependencies]
ed25519-dalek = "1"
base64 = "0.21"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
sc_manager_core = { path = "../../services/core-domain" }

[dev-dependencies]
# test helpers
