[package]
name = "sc_manager_p2p_mesh"
version = "0.1.0"
edition = "2021"

[lib]
name = "sc_manager_p2p_mesh"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
sha3 = "0.10"
hex = "0.4"

# libp2p for production gossip (Gossipsub + QUIC + mDNS)
libp2p = { version = "0.56", features = ["gossipsub", "mdns", "quic", "kad", "macros"], default-features = true }

# Direct per-subcrate deps for clearer API (matching libp2p 0.56 family)
libp2p-gossipsub = "0.48"
libp2p-mdns = "0.48"
libp2p-kad = "0.48"

# Async utilities
futures = "0.3"

[dev-dependencies]
# use tempfile only in tests if needed

[features]
default = []
libp2p = []

