[package]
name = "sc_manager_p2p_mesh"
version = "0.1.0"
edition = "2021"

[lib]
name = "sc_manager_p2p_mesh"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
sha3 = "0.10"
hex = "0.4"

# libp2p for production gossip (Gossipsub + QUIC + mDNS + Kademlia)
# Use libp2p 0.48 family for API stability with subcrates
libp2p = { version = "0.48", features = ["gossipsub", "kad", "mdns-tokio", "tcp-tokio", "tcp-async-io", "dns-async-std", "websocket", "noise", "yamux", "mplex"], default-features = false }

# Keep per-subcrate versions aligned for direct imports where necessary
libp2p-gossipsub = "0.48"
libp2p-mdns = "0.48"
libp2p-kad = "0.48"

# Async utilities
futures = "0.3"
once_cell = "1.18"

[dev-dependencies]
# use tempfile only in tests if needed

[features]
default = []
libp2p = []
libp2p_full = ["libp2p"]


