[package]
name = "update-system"
version = "0.1.0"
edition = "2021"
description = "Update system for SC Manager - initial scaffold implementation"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
ed25519-dalek = "1.0.1"
rand = "0.7"
rand_core = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.3"

[dev-dependencies]
httpmock = "0.7"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
