[package]
name = "sc_manager_app"
version = "0.1.0"
edition = "2021"

[dependencies]
sc_manager_core = { path = "../core-domain" }
sc_manager_eventbus_nats = { path = "../../infrastructure/eventbus-nats" }

# Cryptography
ed25519-dalek = { version = "1.0", features = ["std"] }
# Use deterministic test keypair generation instead of relying on OsRng to avoid rand_core version mismatches

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Integration test deps
postgres = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = { version = "0.8", features = ["std"] }
url = "2"

[dev-dependencies]
sc_manager_adapters = { path = "../../adapters" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
# Redis (async) used in integration tests
redis = { version = "0.32.7", features = ["tokio-comp"] }
async-nats = "0.34"
uuid = { version = "1", features = ["v4"] }
# Stream utilities for async subscribers used in tests
futures-util = "0.3"

[lib]
name = "sc_manager_app"
path = "src/lib.rs"

[patch.crates-io]
cron = { path = "patches/cron" }
nom = { path = "patches/nom" }
