[package]
name = "sc_manager_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sc_manager_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Signing
ed25519-dalek = { version = "1.0", features = ["std"] }
bincode = "1"
serde_json = "1"
base64 = "0.21"
signature = "1"

[dev-dependencies]
# Add test helpers here
