[package]
name = "sc_manager_master_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "sc_manager_master_server"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
# runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# crypto & randomness
ed25519-dalek = "1.0.1"
rand = "0.7"
base64 = "0.21"

# encryption for persistent keystore
aes-gcm = "0.10"
ring = "0.16"
tempfile = { version = "3.5", optional = true }

[features]
default = ["tempfile"]

[dev-dependencies]
# for async tests
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[package.metadata.cargo-fmt]
# follow workspace defaults if any
